Add IDR infrastructure to index

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ https://github.com/hakimel/reveal.js
 <ul>
 <li> <a href="2016/Public-Repository-Workshop">Public repository workshop</a> </li>
 <li> <a href="2016/OMERO-Docker-Workshop">OMERO Docker workshop</a> </li>
+<li> <a href="2016/omero_at_scale-infrastructure_idr/">IDR infrastructure case study</a></li>
 </ul>
 
 <h2>2016</h2>
