--- a/index.html
+++ b/index.html
@@ -30,10 +30,28 @@ https://github.com/hakimel/reveal.js
 <h2>11th Annual Users Meeting June 2016 </h2>
 
 <ul>
-<li> <a href="2016/Public-Repository-Workshop">Public repository workshop</a> </li>
-<li> <a href="2016/OMERO-Docker-Workshop">OMERO Docker workshop</a> </li>
-<li> <a href="2016/omero_at_scale-infrastructure_idr/">IDR infrastructure case study</a></li>
+<li> <a href="2016/Users-Meeting/Workshops/Overview/">Workshops Overview</a> </li>
+<li> <a href="2016/Users-Meeting/Workshops/Public-Repository-Workshop">Public repository workshop</a> </li>
+<li> <a href="2016/Users-Meeting/Workshops/Dockerizing-OMERO">Dockerizing OMERO</a> </li>
+<li> <a href="2016/Users-Meeting/Workshops/Extensible-Import">Extensible Import</a> </li>
+<li> <a href="2016/Users-Meeting/Workshops/OME-File-Formats">OME File Formats</a> </li>
+<li> <a href="2016/Users-Meeting/Workshops/OMERO.figure">OMERO.figure</a> </li>
+<li> <a href="2016/Users-Meeting/Workshops/OMERO-at-scale-How-we-built-the-IDR/">IDR infrastructure case study</a></li>
+<li> <a href="2016/Users-Meeting/Workshops/CLI-Data-Interaction//">Interacting with your data in OMERO</a></li>
 </ul>
 
 <h2>2016</h2>
-<li> <a href="2016/Web-Planning-Jan-2016">Web Planning</a> </li>
+<ul>
+<li> <a href="2016/Web-Planning-Jan-2016/">Web Planning</a> </li>
+<li> <a href="2016/Model-June-2016/">OME 2016-06 Data Model</a> </li>
+<li> <a href="2016/5.3.0-m3-demo-August-2016/">OMERO 5.3.0-m3 Demo</a> </li>
+<li> <a href="2016/BF-OMEFiles-Sep2016/">Bio-Formats/OME Files Architecture</a> </li>
+<li> <a href="2016/BF-5.3.0-Oct2016/">Bio-Formats 5.4.0</a> </li>
+<li> <a href="2016/20161206-GRE-IDR/">The Image Data Resource</a> </li>
+</ul>
+
+<h2>12th Annual Users Meeting June 2017 </h2>
+
+<ul>
+<li> <a href="2017/Users-Meeting/Workshops/Formats-Introduction">OME Files & Formats introduction</a> </li>
+</ul>
